--- a/stylos.css
+++ b/stylos.css
@@ -5,3 +5,51 @@ body {
     background-color:gainsboro;
 }
 
+h1 {
+    text-align: center;
+}
+
+section{
+    text-align: center;
+    margin: 20px;
+    padding: 20px;
+
+}
+
+logo{
+    display: block;
+    margin: 0 auto;
+}
+
+article{
+    text-align: center;
+}
+
+table{
+    border-collapse: collapse;
+    margin: 20px;
+}
+
+th, td {
+    border: 3px solid black;
+    padding: 8px;
+    text-align: left;
+    
+}
+
+button{
+    margin: 5px;
+    border-color: blue;
+}
+
+form{
+    margin: 10px;
+    padding: 10px;
+}
+
+footer {
+    background-color: rgb(91, 148, 185);
+    padding: 15px;
+    margin-top: 20px;
+    text-align: center;
+}
