--- a/stylos.css
+++ b/stylos.css
@@ -1,6 +1,10 @@
 body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    margin: 0;
+    margin-left: 10px;
+    margin-right: 20px;
     padding: 0;
     background-color:gainsboro;
 }
@@ -25,14 +29,14 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    padding: 10px 20px;
     background-color: cornflowerblue;
     width: 100%;
 }
 
 header .logo{
     width: 80px;
-    height: 80px;
+    height: auto;
     animation: rotate 1s linear;
 }
 
