--- a/stylos.css
+++ b/stylos.css
@@ -1,12 +1,10 @@
 body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin-left: 10px;
-    margin-right: 20px;
+    margin-right: 10px;
     padding: 0;
     background-color:gainsboro;
+    padding-top: 20px;
 }
 
 h1 {
@@ -25,18 +23,32 @@ h1 {
     border-radius: 50%;
 }
 
+
+main{
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+    flex-grow: 1;
+}
+
 header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
+    padding: 20px;
     background-color: cornflowerblue;
-    width: 100%;
+    width: 97.5%;
+    height: 50px;
 }
 
-header .logo{
-    width: 80px;
-    height: auto;
+
+.header .titulo{
+    text-align: center;
+    padding: 10px 0;
+}
+
+header .logo img{
+    max-width: 100px;
     animation: rotate 1s linear;
 }
 
@@ -57,19 +69,19 @@ header .logo{
     }
 }
 
-nav{
-    list-style-type: none;
-    padding: 10px;
-    display: inline-block;
-    margin: 0 10px;
-    justify-content: space-evenly;
-    text-align: center;
+nav ul{
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
-
-ul li {
-    display: inline;
-    text-align: center;
-    margin: 50px;
+nav ul li{
+    margin: 0 10px;
+}
+nav ul li a {
+    text-decoration: underline;
+    
 }
 
 section{
@@ -84,12 +96,6 @@ section{
     overflow-y: auto;
     padding: 10px;
     border: 1px solid blueviolet;
-}
-
-.sty
-
-.titulo{
-    padding-top: 60px;
 }
 
 article{
@@ -120,9 +126,12 @@ form{
     padding: 10px;
 }
 
-footer {
+
+
+.sticky-footer {
     background-color: rgb(91, 148, 185);
-    padding: 15px;
+    padding: 10px;
     margin-top: 20px;
     text-align: center;
+    flex-shrink: 0;
 }
