--- a/stylos.css
+++ b/stylos.css
@@ -147,6 +147,20 @@ form{
     margin-top: 10%;
 }
 
+.back-to-top{
+    position: fixed;
+    bottom: 40px;
+    right: 20px;
+    width: 40px;
+    height: 40px;
+    color: rgb(45, 31, 58);
+    border-radius: 40%;
+    font-size: 20px;
+}
+.back-to-top:hover{
+    background-color: cornflowerblue;
+}
+
 .sticky-footer {
     background-color: rgb(91, 148, 185);
     padding: 10px;
