--- a/stylos.css
+++ b/stylos.css
@@ -12,6 +12,7 @@ h1 {
     justify-content: space-between;
     align-items: center;
     animation: fadeIn 1s;
+    margin: 10px;
 }
 
 .logo{
@@ -20,7 +21,7 @@ h1 {
     padding: 20px;
     align-items: center;
     justify-content: center;
-    border-radius: 50%;
+    border-radius: 5%;
 }
 
 
@@ -38,7 +39,7 @@ header{
     align-items: center;
     padding: 20px;
     background-color: cornflowerblue;
-    width: 97.5%;
+    width: 98%;
     height: 50px;
 }
 .fixed-header{
@@ -151,14 +152,51 @@ form{
     position: fixed;
     bottom: 40px;
     right: 20px;
-    width: 40px;
+    width: 20px;
     height: 40px;
     color: rgb(45, 31, 58);
     border-radius: 40%;
-    font-size: 20px;
+    font-size: 30px;
+    
 }
 .back-to-top:hover{
-    background-color: cornflowerblue;
+    background-color: white;
+}
+
+form label{
+    display: block;
+    margin: 5px;
+}
+
+form input{
+    margin-bottom: 10px;
+    padding: 5px;
+    width: 30%;
+    box-sizing: border-box;
+    margin: 18px;
+}
+
+form input, label{
+    display: flex;
+    text-align: left;
+    justify-content: space-between;
+}
+
+fieldset{
+    border-radius: 2px solid beige;
+    padding: 10px 15px;
+    width: 60%;
+}
+
+fieldset label {
+    display: inline-block;
+    margin-bottom: 8px;
+    font-size: 16px;
+    color: black;
+}
+fieldset input[type="checkbox"], fieldset input[type="radio"]{
+    margin-right: 10px;
+
 }
 
 .sticky-footer {
