--- a/stylos.css
+++ b/stylos.css
@@ -132,6 +132,7 @@ th, td {
 button{
     margin: 5px;
     border-color: blue;
+
 }
 
 form{
@@ -146,6 +147,21 @@ form{
     display: block;
     margin: 0 auto;
     margin-top: 10%;
+}
+
+.img{
+    margin: 0 auto;
+    margin-top: 10%;
+    height: 300px;
+    width: 500px;
+    display: block;
+}
+.juego{
+    display: block;
+    text-align: center;
+    margin-bottom: 100px;
+    border: 3px solid black;
+    
 }
 
 .back-to-top{
