cambio fuente del nav en css

--- a/stylos.css
+++ b/stylos.css
@@ -94,6 +94,7 @@ nav ul li{
 }
 nav ul li a {
     text-decoration: underline;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
     
 }
 
